manifest/ai-devops/8.minio-other.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: minio
    app.kubernetes.io/name: minio
  name: minio-service
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
    app.kubernetes.io/component: minio
    app.kubernetes.io/name: minio
