manifest/ai-devops/3.add-anonymous-user-filter.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-user-filter
  namespace: istio-system
spec:
  workloadLabels:
    app: ingressgateway
  filters:
  - listenerMatch:
      listenerType: GATEWAY
    filterName: envoy.lua
    filterType: HTTP
    insertPosition:
      index: FIRST
    filterConfig:
      inlineCode: |
        function envoy_on_request(request_handle)
            request_handle:headers():add("kubeflow-userid","anonymous@kubeflow.org")
        end
